# dotfiles

./: README.md  config.yaml  pyproject.toml
dotfiles/: aerospace.toml  bashrc  chunkwmrc  extend.Xresources  extend.xprofile  gitconfig  hyper.js  khdrc  npmrc  psqlrc  pylintrc  sterminalrc  synergy.conf
dotfiles/config/: flake8
dotfiles/config/alacritty/: alacritty.yml
dotfiles/config/environment.d/: 01-native-wayland.conf
dotfiles/config/fish/: fish_plugins  fishfile
dotfiles/config/fish/conf.d/: start-sway.fish  vars.fish
dotfiles/config/fish/functions/: bobthefish_colors.fish  fish_user_key_bindings.fish  gopath.fish  l.fish  la.fish  lal.fish  ll.fish  newbranch.fish  newcommit.fish  startsway.fish  t.fish  tl.fish  tree.fish
dotfiles/config/fontconfig/: fonts.conf
dotfiles/config/foot/: foot.ini
dotfiles/config/fuzzel/: fuzzel.ini
dotfiles/config/gtk-3.0/: settings.ini
dotfiles/config/gtk-4.0/: settings.ini
dotfiles/config/i3/: config
dotfiles/config/i3blocks/: config
dotfiles/config/i3pystatus/: config.py
dotfiles/config/imv/: config
dotfiles/config/kitty/: kitty.conf
dotfiles/config/nvim/: filetype.vim  ginit.vim  init.lua  init.vim
dotfiles/config/nvim-old/: init.vim  lsps.lua
dotfiles/config/rofi/: config  config.rasi  theme.rasi
dotfiles/config/sc-im/: scimrc
dotfiles/config/sketchybar/: sketchybarrc
dotfiles/config/sketchybar/plugins/: clock.sh
dotfiles/config/sway/: config
dotfiles/config/waybar/: config  style.css
dotfiles/config/xonsh/: rc.xsh
dotfiles/icons/default/: index.theme
(+32 files in other folders)
